fixing the card text overflow

--- a/css/landing.css
+++ b/css/landing.css
@@ -44,15 +44,21 @@ h2, h3 {
 
 .product-card-text-container {
     margin: 0 15px;
+    overflow: hidden;
 }
 
 .product-card h4 {
     color: #607ae2;
     font-size: 12px;
+    margin-bottom: 7px;
 }
 
 .product-card p {
     color: #9d9d9d;
     font-size: 12px;
+    font-weight: 300;
+    height: 50px;
+    line-height: 1.4;
+    margin: 0;
     text-overflow: ellipsis;
 }
